--- a/doctor_opinion/android/app/build.gradle
+++ b/doctor_opinion/android/app/build.gradle
@@ -24,10 +24,10 @@ android {
         applicationId = "com.example.doctor_opinion"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        minSdkVersion 23
+        targetSdkVersion flutter.targetSdkVersion
+        versionCode 1 // Change this to your desired version code
+        versionName "1.0.0" // Change this to your desired version name
     }
 
     buildTypes {
