--- a/doctor_opinion/pubspec.yaml
+++ b/doctor_opinion/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.5.0-180.3.beta <4.0.0'
+  sdk: ">=3.4.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^1.1.2
   file_picker: ^8.0.6
   syncfusion_flutter_pdf: ^26.1.42
+  google_fonts: ^6.2.1
  
   
  
