--- a/doctor_opinion/pubspec.yaml
+++ b/doctor_opinion/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   file_picker: ^8.0.6
   syncfusion_flutter_pdf: ^26.1.42
   google_fonts: ^6.2.1
+  flutter_pdfview: ^1.3.2
+  
  
   
  
